ui_files = [
    'display-ui.xml',
    'integrated-ui.xml',
    'popup-ui.xml',
    'sheets-edit-dialog.xml',
    'sheets-main-dialog.xml',
    'sheets-new-dialog.xml',
    'sheets-remove-dialog.xml',
    'toolbar-ui.xml',
    'toolbox-ui.xml'
]

install_data(ui_files, install_dir: join_paths(pkgdatadir, 'ui'))
