ui_files = [
    'display-ui.xml',
    'integrated-ui.xml',
    'popup-ui.xml',
    'sheets-edit-dialog.ui',
    'sheets-main-dialog.ui',
    'sheets-new-dialog.ui',
    'sheets-remove-dialog.ui',
    'toolbar-ui.xml',
    'toolbox-ui.xml',
    'preferences-dialog.ui',
]

install_data(ui_files, install_dir: pkgdatadir / 'ui')
